; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/binutils/ld/extr_ldemul.c_ldemul_list_emulations.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/binutils/ld/extr_ldemul.c_ldemul_list_emulations.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i8* }

@ld_emulations = common dso_local global %struct.TYPE_3__** null, align 8
@TRUE = common dso_local global i64 0, align 8
@FALSE = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [2 x i8] c" \00", align 1
@.str.1 = private unnamed_addr constant [3 x i8] c"%s\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ldemul_list_emulations(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.TYPE_3__**, align 8
  %4 = alloca i64, align 8
  store i32* %0, i32** %2, align 8
  %5 = load %struct.TYPE_3__**, %struct.TYPE_3__*** @ld_emulations, align 8
  store %struct.TYPE_3__** %5, %struct.TYPE_3__*** %3, align 8
  %6 = load i64, i64* @TRUE, align 8
  store i64 %6, i64* %4, align 8
  br label %7

7:                                                ; preds = %26, %1
  %8 = load %struct.TYPE_3__**, %struct.TYPE_3__*** %3, align 8
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %10 = icmp ne %struct.TYPE_3__* %9, null
  br i1 %10, label %11, label %29

11:                                               ; preds = %7
  %12 = load i64, i64* %4, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %16

14:                                               ; preds = %11
  %15 = load i64, i64* @FALSE, align 8
  store i64 %15, i64* %4, align 8
  br label %19

16:                                               ; preds = %11
  %17 = load i32*, i32** %2, align 8
  %18 = call i32 (i32*, i8*, ...) @fprintf(i32* %17, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  br label %19

19:                                               ; preds = %16, %14
  %20 = load i32*, i32** %2, align 8
  %21 = load %struct.TYPE_3__**, %struct.TYPE_3__*** %3, align 8
  %22 = load %struct.TYPE_3__*, %struct.TYPE_3__** %21, align 8
  %23 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %22, i32 0, i32 0
  %24 = load i8*, i8** %23, align 8
  %25 = call i32 (i32*, i8*, ...) @fprintf(i32* %20, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0), i8* %24)
  br label %26

26:                                               ; preds = %19
  %27 = load %struct.TYPE_3__**, %struct.TYPE_3__*** %3, align 8
  %28 = getelementptr inbounds %struct.TYPE_3__*, %struct.TYPE_3__** %27, i32 1
  store %struct.TYPE_3__** %28, %struct.TYPE_3__*** %3, align 8
  br label %7

29:                                               ; preds = %7
  ret void
}

declare dso_local i32 @fprintf(i32*, i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
